Group modules as ExampleModule

--- a/webview-content/index.html
+++ b/webview-content/index.html
@@ -167,7 +167,7 @@
           </li>
           <li><a class="post-message-link" data-value="{&quot;action&quot;:&quot;rand-sync&quot;}">Get a rand float number from the native app (async)</a></li>
           <li><a class="post-message-link" data-value="{&quot;action&quot;:&quot;rand-async&quot;}">Get a rand float number from the native app (sync)</a></li>
-          <li><a class="post-message-link" data-value="{&quot;action&quot;:&quot;trigger-event&quot;}">Ask EventModule to trigger an event</a></li>
+          <li><a class="post-message-link" data-value="{&quot;action&quot;:&quot;trigger-event&quot;,&quot;params&quot;:{&quot;eventName&quot;:&quot;ExampleEventName&quot;,&quot;eventParams&quot;:{&quot;foo&quot;:&quot;bar&quot;}}}">Ask EventModule to trigger an event</a></li>
         </ul>
 
         <div class="message-input-wrapper">
